--- a/sass/_greyshade.scss
+++ b/sass/_greyshade.scss
@@ -75,6 +75,14 @@ body {
 					}
 					.entry-content {
 						margin-left: 0px;
+						.gist .gist-file .gist-data {
+							.line_numbers {
+								line-height: inherit;
+							}
+							pre {
+								line-height: inherit;
+							}
+						}
 						h2 {
 							font-size: 1.3em;
 							color: #574C4C;
@@ -86,6 +94,12 @@ body {
 						blockquote {
 							border-left: 5px solid $greyshade;
 							background: #FCFCFC;
+						}
+						table {
+							line-height: 1.2em;
+							td {
+								text-align: left;
+							}
 						}
 					}
 					.meta {
@@ -137,6 +151,10 @@ body {
 		position: fixed;
 		opacity: .3;
 		-webkit-transition: all .2s ease-in;
+		-moz-transition: all .2s ease-in;
+		-o-transition: all .2s ease-in;
+		-ms-transition: all .2s ease-in;
+		transition: all .2s ease-in;
 		height: 100%;
 		.intrude-less {
 			width: 80%;
