--- a/source/_includes/post/sharing.html
+++ b/source/_includes/post/sharing.html
@@ -9,7 +9,11 @@
 	{% if site.google_plus_one %}
 	<a class="addthis_button_google_plusone" g:plusone:size="{{ site.google_plus_one_size }}"></a>
 	{% endif %}
-	<a class="addthis_counter addthis_pill_style"></a>
+	<!-- <a class="addthis_counter addthis_pill_style"></a> -->
+	<a href="http://b.hatena.ne.jp/entry/{{ canonical }}" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard" title="Add this entry to Hatena Bookmark">
+		<img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="Add this entry to Hatena Bookmark" width="20" height="20" style="border: none;" />
+	</a>
 	</div>
   <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid={{ site.addthis_profile_id }}"></script>
+	<script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
 </div>
